[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "anvil"
description = "MAAS Anvil"
readme = "README.md"
maintainers = [
    {name = "MAAS Developers", email = "maas-devel@lists.launchpad.net"},
]
authors = [
    {name = "MAAS Developers", email = "maas-devel@lists.launchpad.net"},
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "version",
]
dependencies = [
  "pydantic==1.10.14",
  "python-openstackclient===6.6.0",
  "rich",
  "snap-helpers@ git+https://github.com/skatsaounis/snap-helpers",
  "sunbeam@ git+https://github.com/canonical/snap-openstack@anvil-0.1#subdirectory=sunbeam-python",
]
[project.optional-dependencies]
testing = [
  "pytest",
  "pytest-xdist",
]
[project.scripts]
maas-anvil = "anvil.main:main"
[project.entry-points."snaphelpers.hooks"]
configure = "anvil.hooks:configure"
install = "anvil.hooks:install"
post-refresh = "anvil.hooks:upgrade"

[tool.setuptools.package-data]
anvil = [
  "plugins/plugins.yaml",
  "plugins/*/etc/*/*.tf",
]

[tool.setuptools.dynamic]
version = {attr = "anvil.__version__"}

[tool.setuptools.packages.find]
include = ["anvil*"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
  "I",   # isort
  "RUF", # ruff
  "UP",  # pyupgrade
]
ignore = [
  "UP035",
  "UP006"
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.pytest.ini_options]
testpaths = [
  "tests/"
]

[tool.coverage.report]
fail_under = 80.0
show_missing = true
skip_covered = true

[tool.coverage.run]
source = ["anvil"]
omit = []

[tool.mypy]
install_types = true
non_interactive = true
plugins = []
strict = true
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = "sunbeam.*"
ignore_missing_imports = true
